// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ux-loader normal page with style: emitted errors 1`] = `Array []`;

exports[`ux-loader normal page with style: emitted warnings 1`] = `Array []`;

exports[`ux-loader normal page with style: error 1`] = `null`;

exports[`ux-loader normal page with style: source-vs-result 1`] = `
"
      <template>
        <div>{{ val }}</div>
      </template>
      <style>
      div {
        color: blue;
      }
      </style>
      
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

var $app_style$ = require(\\"!../../lib/loaders/style-loader.js?index=0&type=style!../../lib/loaders/fragment-loader.js?index=0&type=style!./page.ux?uxType=page\\")

var $app_script$ = null
$app_define$('@app-component/page', [], function($app_require$, $app_exports$, $app_module$) {
     $app_module$.exports.template = require(\\"!../../lib/loaders/template-loader.js!../../lib/loaders/fragment-loader.js?index=0&type=template!./page.ux?uxType=page&\\")

     $app_module$.exports.style = $app_style$
})
$app_bootstrap$('@app-component/page',{ packagerVersion: QUICKAPP_TOOLKIT_VERSION })"
`;

exports[`ux-loader normal page, enablePerformanceCheck: emitted errors 1`] = `Array []`;

exports[`ux-loader normal page, enablePerformanceCheck: emitted warnings 1`] = `Array []`;

exports[`ux-loader normal page, enablePerformanceCheck: error 1`] = `null`;

exports[`ux-loader normal page, enablePerformanceCheck: source-vs-result 1`] = `
"
    <template>
      <div>{{ val }}</div>
    </template>
      
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
console.record('### App Performance ### 执行自定义组件模块[PERF:RPK:defineCustomCompModule(page)]开始：' + new Date().toJSON())
    console.time('PERF:RPK:defineCustomCompModule(page)')
    console.time('PERF:RPK:defineCustomCompImport(page)')

console.timeEnd('PERF:RPK:defineCustomCompImport(page)')
var $app_style$ = {}
console.time('PERF:RPK:defineCustomCompScript(page)')
var $app_script$ = null
console.timeEnd('PERF:RPK:defineCustomCompScript(page)')
    onsole.record('### App Performance ### 定义自定义组件函数[PERF:RPK:appDefineCustomCompFn(page)]开始：' + new Date().toJSON())
    console.time('PERF:RPK:appDefineCustomCompFn(page)')
$app_define$('@app-component/page', [], function($app_require$, $app_exports$, $app_module$) {
     $app_module$.exports.template = require(\\"!../../lib/loaders/template-loader.js!../../lib/loaders/fragment-loader.js?index=0&type=template!./page.ux?uxType=page&\\")

})

    console.record('### App Performance ### 定义自定义组件函数[PERF:RPK:appDefineCustomCompFn(page)]结束：' + new Date().toJSON())
    console.timeEnd('PERF:RPK:appDefineCustomCompFn(page)')
console.record('### App Performance ### 启动页面自定义组件[PERF:RPK:appBootstrapCustomCompFn(page)]开始：' + new Date().toJSON())
      console.time('PERF:RPK:appBootstrapCustomCompFn(page)')
$app_bootstrap$('@app-component/page',{ packagerVersion: QUICKAPP_TOOLKIT_VERSION })
console.record('### App Performance ### 启动页面自定义组件[PERF:RPK:appBootstrapCustomCompFn(page)]结束：' + new Date().toJSON())
      console.timeEnd('PERF:RPK:appBootstrapCustomCompFn(page)')
console.record('### App Performance ### 执行自定义组件模块[PERF:RPK:defineCustomCompModule(page)]结束：' + new Date().toJSON())
    console.timeEnd('PERF:RPK:defineCustomCompModule(page)')"
`;

exports[`ux-loader normal page: emitted errors 1`] = `Array []`;

exports[`ux-loader normal page: emitted warnings 1`] = `Array []`;

exports[`ux-loader normal page: error 1`] = `null`;

exports[`ux-loader normal page: source-vs-result 1`] = `
"
    <template>
      <div>{{ val }}</div>
    </template>
      
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

var $app_style$ = {}
var $app_script$ = null
$app_define$('@app-component/page', [], function($app_require$, $app_exports$, $app_module$) {
     $app_module$.exports.template = require(\\"!../../lib/loaders/template-loader.js!../../lib/loaders/fragment-loader.js?index=0&type=template!./page.ux?uxType=page&\\")

})
$app_bootstrap$('@app-component/page',{ packagerVersion: QUICKAPP_TOOLKIT_VERSION })"
`;

exports[`ux-loader without <template /> tag: emitted errors 1`] = `
Array [
  Array [
    [Error: 需要模板 <template> 片段],
  ],
]
`;

exports[`ux-loader without <template /> tag: emitted warnings 1`] = `Array []`;

exports[`ux-loader without <template /> tag: error 1`] = `null`;

exports[`ux-loader without <template /> tag: source-vs-result 1`] = `
"
      <div> without template tag </div>
      
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

var $app_style$ = {}
var $app_script$ = null
$app_define$('@app-component/page', [], function($app_require$, $app_exports$, $app_module$) {
     $app_module$.exports.template = {}
})
$app_bootstrap$('@app-component/page',{ packagerVersion: QUICKAPP_TOOLKIT_VERSION })"
`;
